--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint-staged": "^8.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "tailwindcss": "0.7.4",
     "vue-template-compiler": "^2.5.21"
   },
   "gitHooks": {
