--- a/package.json
+++ b/package.json
@@ -9,27 +9,31 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "register-service-worker": "^1.5.2",
-    "vue": "^2.5.22"
+    "localforage": "1.7.3",
+    "lodash": "4.17.11",
+    "register-service-worker": "1.6.2",
+    "vue": "2.6.6",
+    "vue-context": "3.4.0",
+    "vue-simple-context-menu": "3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-plugin-unit-jest": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/cli-plugin-babel": "3.4.0",
+    "@vue/cli-plugin-eslint": "3.4.0",
+    "@vue/cli-plugin-pwa": "3.4.0",
+    "@vue/cli-plugin-unit-jest": "3.4.0",
+    "@vue/cli-service": "3.4.0",
+    "@vue/eslint-config-standard": "4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "lint-staged": "^8.1.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.1.0",
+    "eslint": "5.14.1",
+    "eslint-plugin-vue": "5.2.2",
+    "lint-staged": "8.1.4",
+    "node-sass": "4.11.0",
+    "sass-loader": "7.1.0",
     "tailwindcss": "0.7.4",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "2.6.6"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
