--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digital-invention-cube-prototype",
+  "name": "digital-invention-dice",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,8 @@
     "register-service-worker": "1.6.2",
     "vue": "2.6.6",
     "vue-context": "3.4.0",
-    "vue-simple-context-menu": "3.1.3"
+    "vue-simple-context-menu": "3.1.3",
+    "vuedraggable": "2.17.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.4.0",
