--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "lodash": "4.17.11",
     "register-service-worker": "1.6.2",
     "vue": "2.6.6",
-    "vue-context": "3.4.0",
-    "vue-simple-context-menu": "3.1.3",
+    "vue-js-modal": "1.3.28",
+    "vue-router": "3.0.2",
     "vuedraggable": "2.17.0"
   },
   "devDependencies": {
