--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "digital-invention-cube-prototype",
-  "short_name": "digital-invention-cube-prototype",
+  "name": "digital-invention-dice",
+  "short_name": "digital-invention-dice",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
