--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digital-invention-dice",
+  "name": "virtual-idea-dice",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "file-saver": "2.0.1",
     "localforage": "1.7.3",
     "lodash": "4.17.11",
     "register-service-worker": "1.6.2",
+    "v-tooltip": "2.0.0-rc.33",
     "vue": "2.6.6",
     "vue-js-modal": "1.3.28",
     "vue-router": "3.0.2",
