--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "register-service-worker": "1.6.2",
     "v-tooltip": "2.0.0-rc.33",
     "vue": "2.6.6",
+    "vue-carousel": "0.18.0-alpha",
     "vue-js-modal": "1.3.28",
     "vue-router": "3.0.2",
     "vuedraggable": "2.17.0"
